It now saves and displays comments. I'll get around to adding a delete function later.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-		<title>News Crawler</title>
+	<head>
+		<meta charset="UTF-8">
+			<title>News Crawler</title>
 	</head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<body>
+		<header>
+			<h1>Live Science Crawler</h1>
+			<ul class="nav nav-tabs">
+				<li role="presentation"><a href="/">All Articles</a></li>
+				<li role="presentation"><a href="/saved">Saved Articles</a></li>
+			</ul>
+		</header>
 		<div class="container">
 			{{{ body }}}
 		</div>
