--- a/views/stories.handlebars
+++ b/views/stories.handlebars
@@ -12,8 +12,7 @@
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-3 btn-group" role="group">
-				<button type="button" class="btn btn-default" id="getComments">See Comments</button>
-				<button type="button" class="btn btn-default" id="addComment">Add a Comment</button>
+				<a href="/comments/{{_id}}">Comments</a>
 			</div>
 		</div>
 	</div>
